After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664590 - XML attribute "tablet" not handled in code
XML attribute "tablet" not handled in code
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: wizard
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-11-22 20:43 UTC by Daniele Forsi
Modified: 2011-11-25 10:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Handle the "tablet" attribute (782 bytes, patch)
2011-11-22 20:43 UTC, Daniele Forsi
committed Details | Review

Description Daniele Forsi 2011-11-22 20:43:43 UTC
Created attachment 201950 [details] [review]
Handle the "tablet" attribute

"tablet" is included in the doctype definition but not in the code.
Comment 1 Bastien Nocera 2011-11-24 17:31:26 UTC
Review of attachment 201950 [details] [review]:

Thanks!