wizard: handle also the "tablet" attribute in the PIN code database

https://bugzilla.gnome.org/show_bug.cgi?id=664590